tests/syntactic/module_bad1/module_bad1.dl

// cannot find G
.module F = G

